...
            android:layout_marginBottom="24dp"
            android:text="@string/login_hint"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/subjectIdField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_corners_grey"
            android:ems="10"
            android:hint="@string/login_id_placeholder"
...
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/identifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/work_sans_medium"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
...
