<resources>
    <string name="app_name">SmartLog</string>
    <string name="app_name_testing">SS TEST</string>

    <string name="login_hint">Please enter your Email to begin.</string>
    <string name="login_id_placeholder">Email</string>
    <string name="login_sign_in">Begin</string>
    <string name="request_permission_title">Welcome to the Smartphone Study (HC210886)!</string>
    <string name="request_permission_body">When you click the button below, please scroll to the SmartLog entry and permit usage access.</string>
    <string name="request_permission_enable_access">Enable Usage Access</string>
    <string name="request_permission_access_enabled">Usage Access Enabled</string>
    <string name="baseline_title">Your usage data is now being shared with the study.</string>
    <string name="control_title">You do not need to do anything.</string>
    <string name="control_body">Simply keep the app installed for the duration of the study.\n\nThank you for your participation!</string>
    <string name="treatment_hint">Stay under the daily limit to earn your reward!</string>
    <string name="treatment_hint_intercept">Stay under the daily limit to hit your target!</string>
    <string name="treatment_incentive_label">Daily Incentive</string>
    <string name="treatment_earned_label">Total Earned</string>
    <string name="debrief_title">Treatment Period Instructions</string>
    <string name="endline_title">Your results have been finalised.</string>
    <string name="over_title">The study is now over. Thank you for participating!</string>
    <string name="over_body">You may now safely delete the app.</string>
    <string name="button_continue">Continue</string>
    <string name="max_usage_format">Max %s</string>
    <string name="dollar_format">$%.2f</string>
</resources>